--- a/SamsFolderforP2/ShoppingCart/ShoppingCart.html
+++ b/SamsFolderforP2/ShoppingCart/ShoppingCart.html
@@ -131,7 +131,7 @@
 </head>
 <body>
     <header>
-        <h1>My Store</h1>
+        <h1>Group 3 Store</h1>
     </header>
     <main>
         <section id="products"></section>
@@ -139,7 +139,7 @@
     </main>    
     <script>
         const CART = {
-            KEY: 'bkasjbdfkjasdkfjhaksdfjskd',
+            KEY: 'P2 ShoppingCart',
             contents: [],
             init(){
                 //check localStorage and initialize the contents of CART.contents
