--- a/SamsFolderforP2/ShoppingCart/ShoppingCart.html
+++ b/SamsFolderforP2/ShoppingCart/ShoppingCart.html
@@ -152,9 +152,9 @@
                     //dummy test data
                     //checks if anything inside the cart, if not this can be be used
                     CART.contents = [ //cart is calling contents
-                        {id:1, title:'Apple', qty:5, itemPrice: 0.85}, // THIS HAS TO BE EMPTY DURING THE PRODUCTION
-                        {id:2, title:'Banana', qty:3, itemPrice: 0.35},
-                        {id:3, title:'Cherry', qty:8, itemPrice: 0.05}
+                        {id:1, title:'MusicVideos', qty:5, itemPrice: 0.85}, // THIS HAS TO BE EMPTY DURING THE PRODUCTION
+                        {id:2, title:'FunnyVideos', qty:3, itemPrice: 0.35},
+                        {id:3, title:'Tutorials', qty:8, itemPrice: 0.05}
                     ];
                     CART.sync();
                 }
